Add installation documentation

--- a/doc/marvis_graph.tex
+++ b/doc/marvis_graph.tex
@@ -26,8 +26,25 @@
 \section{Introduction}
 
 
-\section{User Interface}
+\section{Installation}
 
+A \mg installer is available as supplemental material to our paper
+\cite{landesfeind2013marvisgraph} or may be downloaded at:
+\url{http://marvis.gobics.de}
+To install \mg, follow the instructions of the installer. After successfull
+installation, \mg can be started via your applications menu.
+
+\subsection{Prerequirements} For the installer and for \mg itself, the Java
+Runtime Environment v1.7 (JRE7) or higher is required. JRE7 can be downloaded
+(if it is not already installed) free of charge at \url{http://www.java.com}
+
+\mg has been developed on an 64-bit system with Ubuntu Linux 12.10 ``Quantal Quetzal''
+\footnote{\url{http://www.ubuntu.com}} using the Netbeans IDE 7
+\footnote{\url{https://netbeans.org/}}. Additionally, \mg has been used under
+Windows 7\footnote{\url{http://windows.microsoft.com}}. It has \textbf{not}
+been tested under Mac OSX and is therefore not supported on Mac. 
+
+\section{User Interface}
 \begin{figure}
 	\includegraphics[width=\textwidth]{images/main.pdf}
 	\caption[\mg main window]{\mg main window: 1) list of the main network and
@@ -36,8 +53,6 @@
 		the visualization of the network. 4) Visualization of the network.
 		\label{fig:main}}
 \end{figure}
-
-
 The \mg main window, shown in \pref{fig:main}, displays informations in
 different areas.
 
