Add documentation: excel

--- a/doc/marvis_graph.tex
+++ b/doc/marvis_graph.tex
@@ -179,7 +179,10 @@ following file formats are supported:
 		This text file format is the simplest. On import, several additional
 		parameters need to be given, e.g. the cell separator and quote
 		character.
-	\item 
+	\item[Microsoft Excel (*.xls, *.xls)\footnote{\url{http://office.microsoft.com}}]
+		\mg can directly import data from the Excel spreadsheet file format.
+		On import, the sheet to be imported needs to be specified.
+\end{description}
 
 \subsubsection{Metabolite Marker}
 
